@@ -32,6 +32,7 @@ import java.util.Map;
 import org.apache.hadoop.hdfs.shortcircuit.ClientMmap;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
+import org.apache.hadoop.classification.InterfaceAudience;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.ReadOption;
 import org.apache.hadoop.hdfs.protocol.BlockLocalPathInfo;
@@ -71,6 +72,7 @@ import org.apache.htrace.core.Tracer;
  * if security is enabled.</li>
  * </ul>
  */
+@InterfaceAudience.Private
 class BlockReaderLocalLegacy implements BlockReader {
   private static final Log LOG = LogFactory.getLog(BlockReaderLocalLegacy.class);
 
