@@ -17,11 +17,14 @@
  */
 package org.apache.hadoop.hdfs;
 
+import org.apache.hadoop.classification.InterfaceAudience;
+
 import java.io.IOException;
 
 /**
  * For sharing between the local and remote block reader implementations.
  */
+@InterfaceAudience.Private
 class BlockReaderUtil {
 
   /* See {@link BlockReader#readAll(byte[], int, int)} */
