@@ -18,6 +18,8 @@
 
 package org.apache.hadoop.hdfs;
 
+
+import org.apache.hadoop.classification.InterfaceAudience;
 import org.apache.hadoop.fs.Path;
 import org.apache.hadoop.fs.RemoteIterator;
 import org.apache.hadoop.hdfs.protocol.CorruptFileBlocks;
@@ -29,6 +31,7 @@ import java.util.NoSuchElementException;
  * Provides an iterator interface for listCorruptFileBlocks.
  * This class is used by DistributedFileSystem and Hdfs.
  */
+@InterfaceAudience.Private
 public class CorruptFileBlockIterator implements RemoteIterator<Path> {
   private final DFSClient dfs;
   private String path;
