@@ -58,6 +58,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-7888. Change DFSOutputStream and DataStreamer for convenience of
     subclassing. (Li Bo via szetszwo)
 
+    HDFS-8049. Add @InterfaceAudience.Private annotation to hdfs client
+    implementation. (Takuya Fukudome via szetszwo)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
